infra/kubernetes/arkobank-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arkobank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arkobank-api
  template:
    metadata:
      labels:
        app: arkobank-api
    spec:
      containers:
        - name: api
          image: arkobank/api:demo
          ports:
            - containerPort: 8080
