infra/kubernetes/arkobank-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arkobank-api
spec:
  selector:
    app: arkobank-api
  ports:
    - port: 80
      targetPort: 8080
